--- a/startapp/package.json
+++ b/startapp/package.json
@@ -35,6 +35,7 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
+    "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
     "react-test-renderer": "19.0.0",
