--- a/startapp/package.json
+++ b/startapp/package.json
@@ -27,12 +27,16 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-bootsplash": "^6.3.9",
     "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-web": "~0.20.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "expo-dev-client": "~5.2.0",
+    "lottie-react-native": "7.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
